--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,24 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Timothy Portfolio
+email: timothy.dries@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://example.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
+
+permalink: /:categories/:title
+
+links:
+  - title: about.md
+    url: /about
+  - title: work
+    url: /work
+  - title: articles
+    url: /articles
 
 # Build settings
 markdown: kramdown
