--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Timothy Portfolio
+title: Timothy Dries
 email: timothy.dries@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -13,7 +13,7 @@ github_username:  jekyll
 permalink: /:categories/:title
 
 links:
-  - title: about.md
+  - title: about
     url: /about
   - title: work
     url: /work
